@@ -596,16 +596,16 @@ static StringInfo *GenerateEntropicChaos(RandomInfo *random_info)
 */
 MagickExport double GetPseudoRandomValue(RandomInfo *random_info)
 {
-  register size_t
+  register unsigned long
     *seed;
 
-  size_t
+  unsigned long
     alpha;
 
   seed=random_info->seed;
   do
   {
-    alpha=(size_t) (seed[1] ^ (seed[1] << 11));
+    alpha=(unsigned long) (seed[1] ^ (seed[1] << 11));
     seed[1]=seed[2];
     seed[2]=seed[3];
     seed[3]=seed[0];
@@ -749,7 +749,7 @@ MagickExport void RandomComponentTerminus(void)
 %
 %  The format of the SeedPseudoRandomGenerator method is:
 %
-%      void SeedPseudoRandomGenerator(const size_t seed)
+%      void SeedPseudoRandomGenerator(const unsigned long seed)
 %
 %  A description of each parameter follows:
 %
